# zxwebcam

./: .gitmodules  CMakeLists-ExtZxing.txt  CMakeLists.txt  MagickSource.cpp  MagickSource.h  README.md  TODO.md  buildline.sh  decode.cxx  decode_thread.cxx  decode_thread.h  frame.h  frame_queue.cxx  frame_queue.h  frame_source.cxx  frame_source.h  main.cxx  poster_thread.cxx  poster_thread.h  reader.cxx  reader.h  threadsafe_queue.h  webcam.cxx  webcam.h  webcam_thread.cxx  webcam_thread.h
cmake/Modules/: FindCImg.cmake  FindLibV4l2.cmake
dev_server/: README.md  main.py
dev_server/templates/: index.htm
